@@ -7,6 +7,9 @@ Release changelog for the client & server
     bugfix (server) - power save mode not working - can't properly shut down a game until new players join
 
 1.9.8 (complete)
+    bugfix (both)   - fix token dragging
+    feature (server)- add multiclient optarg
+    bugfix (server) - fix commandline arguments
     bugfix (server) - fix broken whirlpool in Loggerhead_XXIX_Round_5
     feature (both)  - add new ships
     bugfix (server) - ships no longer marked as sunk when sailing through a safe zone
